css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@100;300;400;500;700;900&display=swap');

@keyframes moveObject {
  from {
    transform: translateX(200px);
  }

  50% {
    transform: translateX(0);
  }
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  text-decoration: none;
  scroll-behavior: smooth;
}

body {
  background-color: #e1ebee;
  font-family: 'Open Sans', sans-serif;
  line-height: 1.6;
  overflow-y: hidden;
}

/* index page cover photo */

header.main {
  min-height: calc(100vh - 120px);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

/* nav bar for all pages */

.nav-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: rgba(158, 202, 190, 0.7);
  width: 100%;
  height: 70px;
  position: fixed;
  top: 0;
  /* box-shadow: 0px 10px 10px 10px #fff; */
}

h1.logo {
  color: #2d503f;
  padding: 5px 20px 0;
}

nav.links {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 100%;
  gap: 5px;
}

a.nav-item {
  margin: 0 20px;
  font-size: 20px;
  font-weight: 400;
  padding: 5px 5px 0;
  text-decoration: none;
  color: #2d503f;
  border-left: 8px solid transparent;
}

a.nav-item:hover {
  border-left: 8px solid #2d503f;
}

/* main card for index page */

.bg {
  min-height: calc(100vh - 46px);
  width: 100%;
  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url('../img/chris-henry-unsplash.jpg') no-repeat center center/cover;
  border-bottom-right-radius: 90%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.card {
  /* background-color: #ccc; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  margin: 20px auto 70px;
  padding: 140px 50px 0;
  height: 600px;
  border-radius: 15px;
  color: #fff;
  /* animation: moveObject 2s linear; */
  /* box-shadow: 3px 3px 2px #63bb95; */
}

.hidden {
  display: none;
}

/* TODO */
.card:hover {
  /* background-color: #2d503f;
  opacity: 0.7;
  transition: 1000ms ease-in-out;
  box-shadow: 0px 0px 2px 2px #2d503f; */
}

.profile-image {
  border-radius: 50%;
  height: 240px;
  width: 240px;
}

.card-content {
  text-align: center;
}

.profile-name {
  font-size: 60px;
  font-weight: 500;
}

.profile-subtitle {
  font-size: 30px;
  font-weight: 300;
  margin-bottom: 30px;
}

ul.account-links {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  list-style-type: none;
  margin: 0;
  padding: 0;
  gap: 10px;
}

li.account a {
  color: #fff;
  /* color: #2c776e; */
  font-size: 28px;
}

li.account a:hover,
a.nav-footer:hover {
  color: #63bb95;
}

.buttons-container {
  height: 300px;
  width: 100%;
  /* height: 300px; */
  padding: 70 0 70px 0;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  margin-right: 40px;
  overflow: hidden;
  /* border: 1px solid red; */
}

.side-buttons {
  /* border: 1px solid red; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 5px;
}
.animate {
  animation: moveObject 2s linear;
  transition: ease-in-out;
}
/* footer for all pages */

footer {
  background-color: #333;
  padding: 10px 20px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  margin: 0;
}

a.footer-links {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

a.nav-footer {
  color: #aaa;
  font-size: 16px;
  padding: 12px;
  text-decoration: none;
}

footer .credits {
  color: #aaa;
}

/* about page main section */

header.about {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

main {
  background-color: #e1ebee;
}

section.intro {
  height: 100vh;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

section.intro-dark {
  background-color: #333;
  color: #ddd;
}

section.fill {
  justify-content: space-between;
}

.container {
  width: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.container-text {
  height: 60vh;
  padding: 0 100px 0 40px;
}

.container-text-left {
  height: 60vh;
  padding: 0 40px 0 100px;
}

.intro-title {
  font-size: 50px;
  font-weight: 900;
  line-height: 1.2;
  margin-bottom: 20px;
}

button.more {
  width: 120px;
  height: 120px;
  border-radius: 50%;
  border: none;
  background-color: #63bb95;
  font-size: 18px;
  font-weight: 200;
  padding: 18px 5px 10px;
  margin: 20px 20px 0 0;
  cursor: pointer;
}

button.more:hover {
  background-color: rgba(99, 187, 149, 0.7);
}

button.more i {
  display: block;
  font-size: 36px;
  margin-bottom: 5px;
}
.intro-img {
  height: 70vh;
  max-width: 50vh;
}

.intro-img-big {
  height: 100%;
  max-width: 50vh;
  object-fit: cover;
  margin: 0;
  padding: 0;
  border-top-right-radius: 50%;
  border-bottom-right-radius: 50%;
}

.intro-img-big-right {
  height: 100%;
  max-width: 50vh;
  object-fit: cover;
  margin: 0;
  padding: 0;
  border-top-left-radius: 50%;
  border-bottom-left-radius: 50%;
}

.intro-text {
  font-size: 16px;
  margin-bottom: 10px;
}

button.more-small {
  height: 80px;
  width: 80px;
  margin-top: 40px;
}

